fix: content tags wrap on next line

--- a/components/page-level/content/details/tags/tags.module.css
+++ b/components/page-level/content/details/tags/tags.module.css
@@ -1,6 +1,7 @@
 .tags {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   margin-top: 10px;
